init: update .sh for retardedkernel

--- a/Flasher/ramdisk/overlay.d/init.retard.rc
+++ b/Flasher/ramdisk/overlay.d/init.retard.rc
@@ -2,7 +2,7 @@
 on property:init.svc.qcom-post-boot=stopped
 
 # On first boot
-exec u:r:magisk:s0 root root -- /sbin/init.unitrix.sh
+exec u:r:magisk:s0 root root -- /sbin/init.retard.sh
 
 # If bfq is set by default by prop
 on property:persist.sys.io.scheduler=bfq
