defconfig/kconfig/Makefile: Add support for ThinLTO and LLVM Polly optimizations.

--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -257,6 +257,7 @@ CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
 CONFIG_THINLTO=y
+CONFIG_LLVM_POLLY=y
 # CONFIG_LTO_NONE is not set
 CONFIG_LTO_CLANG=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
