ramdisk: Enable EBPF Support
Signed-off-by: GhostMaster69-dev <rathore6375@gmail.com>
Signed-off-by: rk134 <rahul.kantrapally@gmail.com>

--- a/Flasher/ramdisk/overlay.d/init.epyc.rc
+++ b/Flasher/ramdisk/overlay.d/init.epyc.rc
@@ -16,3 +16,7 @@ on boot
       chown system system /proc/tp_wakeup_switch
       chmod 0644 /proc/tp_wakeup_switch
       write /proc/tp_wakeup_switch 1
+
+# ebpf support
+on init
+      setprop ro.kernel.ebpf.supported true
