vince: defconfig: enable FP boost driver
Signed-off-by: rk134 <rahul.kantrapally@gmail.com>

--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -1362,6 +1362,11 @@ CONFIG_BATTERY_SAVER=y
 # CONFIG_FPR_FPC is not set
 
 #
+# Fingerprint boost driver
+#
+CONFIG_FINGERPRINT_BOOST=y
+
+#
 # SCSI device support
 #
 CONFIG_SCSI_MOD=y
